# InfiniBot

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  InfiniBot.py  Infinibot.py  LICENSE  README.md  SECURITY.md  backup_prod_db.bash  build.bash  entrypoint.sh  follow_logs.bash  infinibot_exec.bash  infinibot_rm.bash  launch.sh  main.py  pyproject.toml  rebuild_and_run.bash  release_prod.bash  remove_container.bash  requirements.txt  rerun.bash  rollback_prod.bash  run.bash  run_harness.bash  run_tests.bash  run_then_exec.bash  server.py  startup.bash  tests.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  env.template  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
CriticalFiles/: .gitignore  IDS.json  TOKEN.txt  db_build.sql
Files/: Bans.binary  Data.binary  JoinToCreateVcs.binary  Members.binary  Messages.binary  ProfaneWords.binary
RequiredFiles/: AdminIDS.txt  Persistent.txt  ProfaneWordsDefault.binary  TOKEN.txt
Server/: Autostart_Instructions.txt  fan.py
defaults/: default_jokes.json  default_profane_words.txt  special_channel_ids.json
docs/: 404.md  Gemfile  _config.yml  about.md  docs.md  features.md  index.md
documentation/: JSONFile.md  db_manager.md  dev_resources.md  event_harness.md  scale_performance_assessment_2026-07.md  server.md
github-pages-site/: 404.html  Gemfile  _config.yml  index.md
resources/: db_build.sql  test_db_build.sql
src/: !old_bot.py  bot.py  custom_types.py  dashboard.py  database.py  event_harness.py  file_manager.py  global_settings.py  help_commands.py  (+9 more)
(+194 files in other folders)
